--- a/09-pod-config.yaml
+++ b/09-pod-config.yaml
@@ -8,7 +8,7 @@ spec:
     image: nginx
     envFrom:
     - configMapRef:
-        name: nginx-config
+        name: nginx-configl
     # env: 
     # - name: course
     #   valueFrom:
