--- a/15-replicaset.yaml
+++ b/15-replicaset.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:stable-alpine-perl
 ---
 apiVersion: v1
 kind: Service
