--- a/16-deployment.yaml
+++ b/16-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:stable-alpine-perl
+        image: nginx
 ---
 apiVersion: v1 
 kind: Service 
