--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -30,7 +30,8 @@ kind: Pod
 metadata: 
   name: ebs-static 
 spec:
-  nodeSelector: topology.kubernetes.io/zone: us-east-1c
+  nodeSelector: 
+    topology.kubernetes.io/zone: us-east-1c
   containers:
   - name: nginx
     image: nginx 
