--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -28,7 +28,9 @@ spec:
 apiVersion: v1
 kind: Pod 
 metadata: 
-  name: ebs-static 
+  name: ebs-static
+  labels:
+    purpose: ebs-static 
 spec:
   nodeSelector: 
     topology.kubernetes.io/zone: us-east-1c
