--- a/volumes/02-ebs-sc.yaml
+++ b/volumes/02-ebs-sc.yaml
@@ -2,6 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: expense-ebs
+reclaimPolicy: Retain
 provisioner: ebs.csi.aws.com 
 volumeBindingMode: waitForFirstConsurmer  # storage will be created when pod is getting created
 
