--- a/volumes/02-ebs-sc.yaml
+++ b/volumes/02-ebs-sc.yaml
@@ -3,6 +3,5 @@ kind: StorageClass
 metadata:
   name: expense-ebs
 reclaimPolicy: Retain
-provisioner: ebs.csi.aws.com 
-volumeBindingMode: waitForFirstConsurmer  # storage will be created when pod is getting created
-
+provisioner: ebs.csi.aws.com
+volumeBindingMode: WaitForFirstConsumer # storage will be created when pod is getting created
