--- a/volumes/03-ebs-dynamic.yaml
+++ b/volumes/03-ebs-dynamic.yaml
@@ -18,8 +18,8 @@ metadata:
   labels:
     purpose: ebs-dynamic
 spec:
-  nodeSelector:
-    topology.kubernetes.io/zone: us-east-1a
+  # nodeSelector:
+  #   topology.kubernetes.io/zone: us-east-1a
   containers:
   - name: nginx 
     image: nginx 
