--- a/volumes/03-ebs-dynamic.yaml
+++ b/volumes/03-ebs-dynamic.yaml
@@ -1,46 +1,46 @@
-apiVersion: v1 
-kind: PersistentVolumeClaim 
-metadata: 
-  name: ebs-dynamic 
-spec: 
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ebs-dynamic
+spec:
   storageClassName: "expense-ebs"
-  volumeName: ebs-static
   accessModes:
-  - ReadWriteOnce
-resources:
-  requests:
-    storage: 3Gi
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 3Gi
 ---
-apiVersion: v1 
-kind: Pod 
+apiVersion: v1
+kind: Pod
 metadata:
   name: ebs-dynamic
   labels:
     purpose: ebs-dynamic
 spec:
-  # nodeSelector:
-  #   topology.kubernetes.io/zone: us-east-1a
+  nodeSelector:
+    topology.kubernetes.io/zone: us-east-1a
   containers:
-  - name: nginx 
-    image: nginx 
-    volumeMounts:
+  - name: nginx
+    image: nginx
+    volumeMounts: # docker run -v hostpath:contaierpath
     - name: ebs-dynamic
       mountPath: /usr/share/nginx/html
-  volumes: 
+  volumes:
   - name: ebs-dynamic
-    persistentVolumeClaim: 
+    persistentVolumeClaim:
       claimName: ebs-dynamic
 ---
-apiVersion: v1 
-kind: Service 
+kind: Service
+apiVersion: v1
 metadata:
-  name: nginx 
-spec: 
+  name: nginx
+spec:
   type: LoadBalancer
-  selector: 
-    purpose: ebs-static
+  selector:
+    purpose: ebs-dynamic
   ports:
-  - name: nginx-svc-port 
+  - name: nginx-svc-port
     protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 80 # service port
+    targetPort: 80 # container port
+    nodePort: 30007
