--- a/volumes/04-efs-static.yaml
+++ b/volumes/04-efs-static.yaml
@@ -28,4 +28,39 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: efs-static
+  labels:
+    purpose: efs-static
+spec:
+  containers:
+  - name: nginx
+    image: nginx
+    volumeMounts: # docker run -v hostpath:containerpath
+    - name: expense-efs 
+      mountPath: /usr/share/nginx/html
+  volumes: 
+  - name: expense-efs
+    persistentVolumeClaim: 
+      claimName: expense-efs
+---
+apiVersion: v1 
+kind: Service
+metadata:
+  name: nginx
+spec:
+  type: LoadBalancer
+  selector:
+    purpose: efs-static
+  ports:
+  - name: nginx-svc-port
+    protocol: TCP
+    port: 80
+    targetPort: 80
+    nodePort: 30007
+
+
 
