--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -10,7 +10,7 @@ spec:
   csi: 
     driver: ebs.csi.aws.com
     fsType: ext4
-    volumeHandle: vol-0f2ad3d48734bc9ee
+    volumeHandle: vol-004b472bb35944e8d   #volume shold be change as per you created
 ---
 apiVersion: v1 
 kind: PersistentVolumeClaim 
@@ -33,7 +33,7 @@ metadata:
     purpose: ebs-static 
 spec:
   nodeSelector: 
-    topology.kubernetes.io/zone: us-east-1a
+    topology.kubernetes.io/zone: us-east-1a   # zone should be change as per your volume created
   containers:
   - name: nginx
     image: nginx 
@@ -50,7 +50,7 @@ kind: Service
 metadata:
   name: nginx 
 spec:
-  type: LoadBalancer
+  type: LoadBalancer    # it will take 5min time to up and running loadbalancer
   selector:
     purpose: ebs-static
   ports:
